Bug 774357 - Fix a crash in nsHTMLMediaElement::EndMediaStreamPlayback r=roc